feat: create 5.39.7 release notes

--- a/docs/release-notes/5.39.7/changelog.mdx
+++ b/docs/release-notes/5.39.7/changelog.mdx
@@ -8,13 +8,15 @@ import { GithubRelease } from "@/components/GithubRelease";
 
 <GithubRelease version={"5.39.7"} />
 
-## ✍️ Headless CMS
+## Headless CMS
 
-✍️
+### Unpublishing Content Entries - Ensuring All Internal Records Are Correctly Updated ([#4137](https://github.com/webiny/webiny-js/pull/4137))
+
+We've detected an issue where, upon unpublishing a content entry, an internal record was not correctly updated. This issue has now been resolved, and the internal records are now correctly updated when unpublishing content entries.
 
 ## Deployments
 
-### Introducing the `--data-migration-reporter` Flag
+### Introducing the `--data-migration-reporter` Flag ([#4136](https://github.com/webiny/webiny-js/pull/4136))
 
 Upon deploying the **API** project application, via the [`webiny deploy`](/docs/core-development-concepts/basics/project-deployment) command, users can now use the `--data-migration-reporter` flag in order to decide whether they want to see the data migration-related logs in the terminal or not, while the deployment is in progress.
 
