feat: create 5.39.7 release notes

--- a/docs/release-notes/5.39.7/changelog.mdx
+++ b/docs/release-notes/5.39.7/changelog.mdx
@@ -16,14 +16,20 @@ We've detected an issue where, upon unpublishing a content entry, an internal re
 
 ## Deployments
 
-### Introducing the `--data-migration-reporter` Flag ([#4136](https://github.com/webiny/webiny-js/pull/4136))
+### Introducing the `WEBINY_MIGRATION_LOG_STREAMING` Environment Variable ([#4136](https://github.com/webiny/webiny-js/pull/4136) [#4139](https://github.com/webiny/webiny-js/pull/4139))
 
-Upon deploying the **API** project application, via the [`webiny deploy`](/docs/core-development-concepts/basics/project-deployment) command, users can now use the `--data-migration-reporter` flag in order to decide whether they want to see the data migration-related logs in the terminal or not, while the deployment is in progress.
+Upon deploying the **API** project application, users can now use the `WEBINY_MIGRATION_LOG_STREAMING` environment variable in order to decide whether they want the data migration-related logs to be streamed into the terminal or not, during the deployment process.
 
-Note that passing the `--data-migration-reporter` flag doesn't change the already existing behavior of the `webiny deploy` command because the default value of the flag *is* set to `true`. The flag only allows users to potentially avoid the data migration logs being printed in the terminal, by passing `--no-data-migration-reporter`.
+Note that, since the streaming of data migration logs is enabled by default, the `WEBINY_MIGRATION_LOG_STREAMING` variable is essentially only used when the user wants to disable the streaming of data migration logs.
+
+To disable the streaming of data migration logs, set the `WEBINY_MIGRATION_LOG_STREAMING` environment variable to `false`:
+
+```bash
+WEBINY_MIGRATION_LOG_STREAMING=false webiny deploy api --env=dev
+```
 
 <Alert type="info">
 
-  Regardless of the flag being used, the pending data migrations will still be executed and all the logs will still be available in the Amazon CloudWatch logs.
+  Regardless of the `WEBINY_MIGRATION_LOG_STREAMING` environment variable being used or not, the applicable data migrations will always be executed and all the data migration logs will still be available in the Amazon CloudWatch logs.
 
 </Alert>
