feat: add pageHeader frontmatter flag

--- a/docs/developer-docs/5.39.x/get-started/welcome.mdx
+++ b/docs/developer-docs/5.39.x/get-started/welcome.mdx
@@ -2,6 +2,7 @@
 id: 5f147eea
 title: Welcome to Webiny Docs
 description: Learn how to install Webiny and customize its capabilities as a developer.
+pageHeader: false
 ---
 
 import { Hero } from "@/components/landing-pages/Hero";
